SintaticoParser.py
# Generated from .\Sintatico.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SintaticoParser ( Parser ):

    grammarFileName = "Sintatico.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'fun'", "'for'", "'if'", "'else'", 
                     "'while'", "'print'", "'return'", "'or'", "'and'", 
                     "'not'", "'true'", "'false'", "'nil'", "'this'", "'super'", 
                     "'('", "')'", "'{'", "'}'", "','", "'.'", "'-'", "'+'", 
                     "';'", "'/'", "'*'", "'%'", "'<'", "'>'", "'=='", "'!='", 
                     "'<='", "'>='", "'='" ]

    symbolicNames = [ "<INVALID>", "VAR", "FUN", "FOR", "IF", "ELSE", "WHILE", 
                      "PRINT", "RETURN", "OR", "AND", "NOT", "TRUE", "FALSE", 
                      "NIL", "THIS", "SUPER", "OPEN_PAREN", "CLOSE_PAREN", 
                      "OPEN_BRACE", "CLOSE_BRACE", "COMMA", "DOT", "MINUS", 
                      "PLUS", "SEMICOLON", "DIVIDE", "MULTIPLY", "MODULO", 
                      "LESS_THAN", "GREATER_THAN", "EQUAL", "NOT_EQUAL", 
                      "LESS_EQUAL", "GREATER_EQUAL", "ASSIGN", "IDENTIFIER", 
                      "STRING", "NUMBER", "COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_funDecl = 2
    RULE_varDecl = 3
    RULE_statement = 4
    RULE_exprStmt = 5
    RULE_forStmt = 6
    RULE_ifStmt = 7
    RULE_printStmt = 8
    RULE_returnStmt = 9
    RULE_whileStmt = 10
    RULE_block = 11
    RULE_expression = 12
    RULE_assignment = 13
    RULE_logic_or = 14
    RULE_logic_and = 15
    RULE_equality = 16
    RULE_comparison = 17
    RULE_term = 18
    RULE_factor = 19
    RULE_unary = 20
    RULE_call = 21
    RULE_primary = 22
    RULE_arguments = 23
    RULE_function = 24
    RULE_parameters = 25

    ruleNames =  [ "program", "declaration", "funDecl", "varDecl", "statement", 
                   "exprStmt", "forStmt", "ifStmt", "printStmt", "returnStmt", 
                   "whileStmt", "block", "expression", "assignment", "logic_or", 
                   "logic_and", "equality", "comparison", "term", "factor", 
                   "unary", "call", "primary", "arguments", "function", 
                   "parameters" ]

    EOF = Token.EOF
    VAR=1
    FUN=2
    FOR=3
    IF=4
    ELSE=5
    WHILE=6
    PRINT=7
    RETURN=8
    OR=9
    AND=10
    NOT=11
    TRUE=12
    FALSE=13
    NIL=14
    THIS=15
    SUPER=16
    OPEN_PAREN=17
    CLOSE_PAREN=18
    OPEN_BRACE=19
    CLOSE_BRACE=20
    COMMA=21
    DOT=22
    MINUS=23
    PLUS=24
    SEMICOLON=25
    DIVIDE=26
    MULTIPLY=27
    MODULO=28
    LESS_THAN=29
    GREATER_THAN=30
    EQUAL=31
    NOT_EQUAL=32
    LESS_EQUAL=33
    GREATER_EQUAL=34
    ASSIGN=35
    IDENTIFIER=36
    STRING=37
    NUMBER=38
    COMMENT=39
    WHITESPACE=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SintaticoParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SintaticoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SintaticoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SintaticoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SintaticoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 481045510622) != 0):
                self.state = 52
                self.declaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(SintaticoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funDecl(self):
            return self.getTypedRuleContext(SintaticoParser.FunDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(SintaticoParser.VarDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(SintaticoParser.StatementContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SintaticoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.funDecl()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.varDecl()
                pass
            elif token in [3, 4, 6, 7, 8, 11, 12, 13, 14, 15, 16, 17, 19, 23, 36, 37, 38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(SintaticoParser.FUN, 0)

        def function(self):
            return self.getTypedRuleContext(SintaticoParser.FunctionContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)




    def funDecl(self):

        localctx = SintaticoParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SintaticoParser.FUN)
            self.state = 66
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SintaticoParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(SintaticoParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(SintaticoParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(SintaticoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = SintaticoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(SintaticoParser.VAR)
            self.state = 69
            self.match(SintaticoParser.IDENTIFIER)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 70
                self.match(SintaticoParser.ASSIGN)
                self.state = 71
                self.expression()


            self.state = 74
            self.match(SintaticoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(SintaticoParser.ExprStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(SintaticoParser.ForStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(SintaticoParser.IfStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(SintaticoParser.PrintStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(SintaticoParser.ReturnStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(SintaticoParser.WhileStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(SintaticoParser.BlockContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SintaticoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14, 15, 16, 17, 23, 36, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.exprStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.forStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.ifStmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.printStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.returnStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.whileStmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(SintaticoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SintaticoParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)




    def exprStmt(self):

        localctx = SintaticoParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.expression()
            self.state = 86
            self.match(SintaticoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SintaticoParser.FOR, 0)

        def OPEN_PAREN(self):
            return self.getToken(SintaticoParser.OPEN_PAREN, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(SintaticoParser.SEMICOLON)
            else:
                return self.getToken(SintaticoParser.SEMICOLON, i)

        def CLOSE_PAREN(self):
            return self.getToken(SintaticoParser.CLOSE_PAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(SintaticoParser.StatementContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(SintaticoParser.VarDeclContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(SintaticoParser.ExprStmtContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SintaticoParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SintaticoParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SintaticoParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = SintaticoParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SintaticoParser.FOR)
            self.state = 89
            self.match(SintaticoParser.OPEN_PAREN)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 90
                self.varDecl()
                pass
            elif token in [11, 12, 13, 14, 15, 16, 17, 23, 36, 37, 38]:
                self.state = 91
                self.exprStmt()
                pass
            elif token in [25]:
                self.state = 92
                self.match(SintaticoParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 481044985856) != 0):
                self.state = 95
                self.expression()


            self.state = 98
            self.match(SintaticoParser.SEMICOLON)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 481044985856) != 0):
                self.state = 99
                self.expression()


            self.state = 102
            self.match(SintaticoParser.CLOSE_PAREN)
            self.state = 103
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SintaticoParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(SintaticoParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SintaticoParser.CLOSE_PAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SintaticoParser.StatementContext)
            else:
                return self.getTypedRuleContext(SintaticoParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(SintaticoParser.ELSE, 0)

        def getRuleIndex(self):
            return SintaticoParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = SintaticoParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(SintaticoParser.IF)
            self.state = 106
            self.match(SintaticoParser.OPEN_PAREN)
            self.state = 107
            self.expression()
            self.state = 108
            self.match(SintaticoParser.CLOSE_PAREN)
            self.state = 109
            self.statement()
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 110
                self.match(SintaticoParser.ELSE)
                self.state = 111
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(SintaticoParser.PRINT, 0)

        def SEMICOLON(self):
            return self.getToken(SintaticoParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(SintaticoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SintaticoParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = SintaticoParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SintaticoParser.PRINT)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 115
                self.expression()
                pass

            elif la_ == 2:
                self.state = 116
                self.match(SintaticoParser.IDENTIFIER)
                pass


            self.state = 119
            self.match(SintaticoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SintaticoParser.RETURN, 0)

        def SEMICOLON(self):
            return self.getToken(SintaticoParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = SintaticoParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(SintaticoParser.RETURN)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 481044985856) != 0):
                self.state = 122
                self.expression()


            self.state = 125
            self.match(SintaticoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SintaticoParser.WHILE, 0)

        def OPEN_PAREN(self):
            return self.getToken(SintaticoParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SintaticoParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SintaticoParser.CLOSE_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SintaticoParser.BlockContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = SintaticoParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SintaticoParser.WHILE)
            self.state = 128
            self.match(SintaticoParser.OPEN_PAREN)
            self.state = 129
            self.expression()
            self.state = 130
            self.match(SintaticoParser.CLOSE_PAREN)
            self.state = 131
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACE(self):
            return self.getToken(SintaticoParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(SintaticoParser.CLOSE_BRACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SintaticoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SintaticoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SintaticoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SintaticoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(SintaticoParser.OPEN_BRACE)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 481045510622) != 0):
                self.state = 134
                self.declaration()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(SintaticoParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SintaticoParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = SintaticoParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SintaticoParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(SintaticoParser.ASSIGN, 0)

        def assignment(self):
            return self.getTypedRuleContext(SintaticoParser.AssignmentContext,0)


        def call(self):
            return self.getTypedRuleContext(SintaticoParser.CallContext,0)


        def DOT(self):
            return self.getToken(SintaticoParser.DOT, 0)

        def logic_or(self):
            return self.getTypedRuleContext(SintaticoParser.Logic_orContext,0)


        def getRuleIndex(self):
            return SintaticoParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = SintaticoParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 144
                    self.call()
                    self.state = 145
                    self.match(SintaticoParser.DOT)


                self.state = 149
                self.match(SintaticoParser.IDENTIFIER)
                self.state = 150
                self.match(SintaticoParser.ASSIGN)
                self.state = 151
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.logic_or()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SintaticoParser.Logic_andContext)
            else:
                return self.getTypedRuleContext(SintaticoParser.Logic_andContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SintaticoParser.OR)
            else:
                return self.getToken(SintaticoParser.OR, i)

        def getRuleIndex(self):
            return SintaticoParser.RULE_logic_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_or" ):
                listener.enterLogic_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_or" ):
                listener.exitLogic_or(self)




    def logic_or(self):
